# deepseek-python-client

./: .gitattributes  README.md  project_map.txt  pyproject.toml  requirements.txt
examples/: basic_usage.py
src/deepseek/: client.py
src/deepseek/api/: __init__.py  transport.py
src/deepseek/api/services/: __init__.py  chat.py
src/deepseek/core/: __init__.py  config.py  exceptions.py  logging.py
tests/unit/: test_client.py
